# pyright-stubgen

./: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: lint.yaml
src/pyright_stubgen/: __init__.py  base.py  mypy.py  pyright.py  stubgen.py
