[project]
name = "pyright-stubgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4",
    "pyright",
    "typing-extensions",
]
[project.scripts]
pyright-stubgen = "pyright_stubgen:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3",
    "ruff>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyright_stubgen"]

[tool.hatch.build.targets.sdist]
include = ["src/pyright_stubgen"]
