[project]
name = "pyright-stubgen"
version = "0.0.0"
description = "stubgen using pyright"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AsyncIO",
]
requires-python = ">=3.9"
dependencies = [
    "anyio>=4",
    "mypy",
    "pyright",
    "sqlalchemy>=2.0.34",
    "typing-extensions",
]
[project.scripts]
pyright-stubgen = "pyright_stubgen.pyright:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=3",
    "ruff>=0.6.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyright_stubgen"]

[tool.hatch.build.targets.sdist]
include = ["src/pyright_stubgen"]
